--- a/reddit text cleaning.Rmd
+++ b/reddit text cleaning.Rmd
@@ -27,7 +27,7 @@ corpus <- tm_map(corpus, tolower)
 corpus <- tm_map(corpus, removePunctuation)
 corpus <- tm_map(corpus, removeNumbers)
 corpus <- tm_map(corpus, stripWhitespace)
-corpus <- tm_map(corpus, removeWords, c('dave', 'chapelle', 'netflix', 'trans', 'walkout', 'chappelle','just','like'))
+cleanedtext <- tm_map(corpus, removeWords, c('dave', 'chapelle', 'netflix', 'trans', 'walkout', 'chappelle','just','like'))
 
 remove_newline <- function(x) gsub('\n','',x)
 corpus <- tm_map(corpus,content_transformer(remove_newline))
@@ -35,6 +35,15 @@ corpus <- tm_map(corpus,content_transformer(remove_newline))
 inspect(corpus[1:5])
 
 writeLines(as.character(corpus),"DC cleaned stop.txt")
+
+class(cleanedtext)
+
+library(textreg)
+
+convert.tm.to.character(corpus)
+
+?convert.tm.to.character
+class(corpus)
 
 
 ```
