--- a/reddit text mining.Rmd
+++ b/reddit text mining.Rmd
@@ -13,13 +13,13 @@ library(RedditExtractoR)
 
 dc_urls <- find_thread_urls(keywords="dave chapelle netflix trans", sort_by = 'relevance', period = 'month')
 
-unique(dc_urls$subreddit)
+dc_subreddits <- unique(dc_urls$subreddit)
 
 dc_comments <- get_thread_content(dc_urls$url)
 
 write.csv(dc_comments[["threads"]], "./Dave Chapelle Threads.csv", row.names = FALSE)
 write.csv(dc_comments[["comments"]], "./Dave Chapelle Comments.csv", row.names = FALSE)
-
+write.csv(dc_subreddits, "Dave Chapelle Subreddits.csv", row.names = FALSE)
 ```
 
 ### Extract data for Joe Manchin
@@ -28,12 +28,13 @@ write.csv(dc_comments[["comments"]], "./Dave Chapelle Comments.csv", row.names =
 
 jm_urls <- find_thread_urls(keywords="joe manchin climate bill", sort_by = 'relevance', period = 'month')
 
-unique(jm_urls$subreddit)
+jm_subreddits <- unique(jm_urls$subreddit)
 
 jm_comments <- get_thread_content(jm_urls$url)
 
 write.csv(jm_comments[["threads"]], "./Joe Manchin Threads.csv", row.names = FALSE)
 write.csv(jm_comments[["comments"]], "./Joe Manchin Comments.csv", row.names = FALSE)
+write.csv(jm_subreddits, "Joe Manchin Subreddits.csv", row.names = FALSE)
 ```
 
 
