--- a/jm sentiment analysis.Rmd
+++ b/jm sentiment analysis.Rmd
@@ -1,13 +1,13 @@
 ---
 output: html_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
 ---
-# Sentiment Analyses EDA
+# Joe Manchin Controversy Sentiment Analyses (EDA)
 
 ### Libraries:
 
-```{r echo=FALSE}
+```{r results=FALSE, message=FALSE, warning=FALSE}
 library(sentimentr)
 library(vader)
 library(lubridate)
@@ -50,26 +50,99 @@ dc_full <- merge(dc_thre, dc_comm)
 # sentimentr 
 
 ```{r}
+# 1. threads
 
-# threads
-
+# 1.1 by thread text
 dc_sr_thre <- get_sentences(dc_thre$thread.text)
 dc_sr_thre <- sentiment_by(dc_sr_thre, dc_thre$thread.text)
 plot(dc_sr_thre$word_count, dc_sr_thre$ave_sentiment)
 
-df <- merge(dc_sr_thre, dc_thre)
-cor(df$thread.score, df$thread.number.comments)
-cor(df$thread.score, df$ave_sentiment)
+# summary
+summary(dc_sr_thre)
+plot(density(dc_sr_thre$ave_sentiment))
 
-r
+# correlations
+df1 <- merge(dc_sr_thre, dc_thre)
+cor(df1$thread.score, df1$thread.number.comments) # 0.781
+cor(df1$ave_sentiment, df1$word_count) # -0.287
+cor(df1$ave_sentiment, df1$thread.score) # 0.156
+cor(df1$ave_sentiment, df1$thread.number.comments) # 0.057
+## nothing fruitful
+
+# 1.2 by thread title
+dc_sr_titl <- get_sentences(dc_thre$thread.title)
+dc_sr_titl <- sentiment_by(dc_sr_titl, dc_thre$thread.title)
+
+# summary and plot
+summary(dc_sr_titl)
+plot(density(dc_sr_thre$ave_sentiment), 
+     xlim=c(-1.5,1),
+     ylim=c(0,4))
+lines(density(dc_sr_titl$ave_sentiment))
+
+# correlations 
+df12 <- merge(dc_sr_titl, dc_thre)
+cor(df12$ave_sentiment, df12$word_count)  ## -0.346**
+cor(df12$ave_sentiment, df12$thread.score)  # 0.067
+cor(df12$ave_sentiment, df12$thread.number.comments) # 0.05
 
 
+
+## 1.3 by subreddit
+
+# text by subreddit
+dc_sr_thre_sub <- get_sentences(dc_thre$thread.text)
+dc_sr_thre_sub <- sentiment_by(dc_sr_thre_sub, dc_thre$subreddit)
+
+df13 <- merge(dc_sr_thre_sub, dc_thre)
+
+df13 %>%
+  group_by(subreddit) %>%
+  mutate(subreddit = fct_reorder(subreddit, ave_sentiment)) %>%
+  ggplot(aes(x=subreddit, y=ave_sentiment)) +
+  geom_bar(stat='identity')
+
+
+# title by subreddit
+dc_sr_titl_sub <- get_sentences(dc_thre$thread.title)
+dc_sr_titl_sub <- sentiment_by(dc_sr_titl_sub, dc_thre$subreddit)
+
+df14 <- merge(dc_sr_titl, dc_thre)
+
+```
+
+
+```{r}
 # comments
 
+# by comment
 dc_sr_comm <- get_sentences(dc_full$comment)
 dc_sr_comm <- sentiment_by(dc_sr_comm, dc_full$comment)
 
-mean(dc_sr_comm$sentiment)
+
+df2 <-merge(dc_sr_comm, dc_full)
+cor(df2$ave_sentiment, df2$word_count) # -0.018
+cor(df2$ave_sentiment, df2$comment.score) # -0.006
+cor(df2$ave_sentiment, df2$thread.number.comments) # 0.023
+cor(df2$ave_sentiment, df2$thread.score) # 0.027
+
+
+# summary and plot
+summary(dc_sr_comm)
+plot(density(dc_sr_titl$ave_sentiment), 
+     xlim=c(-1.5,1),
+     ylim=c(0,4),
+     main = "Average Sentiment by Text")
+lines(density(dc_sr_thre$ave_sentiment),
+      col = 2)
+lines(density(dc_sr_comm$ave_sentiment),
+      col = 3)
+legend("topleft", 
+       c('title text','post text','comments'),
+       col = 1:3,
+       lty = 1,
+       title = "Text Colors")
+
 
 ```
 
@@ -128,14 +201,6 @@ library(MASS)
 ```
 
 
-## sentimentr
-
-```{r}
-
-
-```
-
-
 ```{r}
 dsent1 <- pivot_longer(dsent, c(1:4), 
                        names_to = "type", 
@@ -163,10 +228,6 @@ dtype
 
 ```
 
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ## Joe Manchin analysis
 
